<resources>
    <string name="app_name">FoodiePal</string>
    <string name="app_sub_title">Culinary Companion</string>
    <!-- Strings related to login/register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="action_login_short">Login</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_new_account_label">Create new account</string>
    <string name="create_label">Create</string>

    <string name="recipes_label">Recipes</string>
    <string name="meal_planner_label">Meal Planner</string>
    <string name="blog_label">Blog</string>
    <string name="contact_label">Contact</string>
    <string name="about_me_label">About Me</string>

    <string name="logged_in_user_id">LOGGED_IN_USER_ID</string>
    <string name="logged_in_user_email">LOGGED_IN_USER_EMAIL</string>
    <string name="logged_in_user_name">LOGGED_IN_USER_NAME</string>

    <string name="logout">Logout</string>

    <string name="rating_total_suffix">%1$s/5</string>

    <string name="add_fab_desc">Float action button: add new item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="contact_tel">1111111111</string>
    <string name="contact_email">foodiepal@mail.com</string>

    <string name="culinary_journey_title">Culinary Journey</string>
    <string name="culinary_journey_desc">Hello, food enthusiasts! I\'m Ranjan Paudel, the passionate creator behind Foodiepal, your go-to app for culinary delights.
        \n\nMy journey in the world of cooking started with a simple fascination for flavors and the joy of bringing people together through delicious meals. From experimenting in my home kitchen to exploring diverse cuisines, I\'ve embarked on a culinary adventure that has shaped the essence of Foodiepal. Each recipe in this app reflects my love for food and the joy of sharing delightful moments around the table.</string>

    <string name="favorite_recipes_title">Favorite Recipes</string>
    <string name="favorite_recipes_desc">In the process of curating Foodiepal, I\'ve had the pleasure of discovering and crafting some of my favorite recipes. These are not just dishes; they are stories on a plate, each ingredient carefully chosen to create a symphony of flavors.
        Some of my all-time favorites include:\n
        - Momos:\nThe fast food of Nepal, which looks like dumplings with juicy meat/veg stuffing inside it. You just need flour, some ground and spiced stuffing of your choice and a hot sauce to dip.\n\n
        - Chicken Spaghetti with cheese:\nI really like the spaghetti mixed with fried chicken and cheese on to of it.
        \n\nFeel free to explore these recipes and experience the joy they bring to my kitchen and, hopefully, to yours.
    </string>
    <string name="food_philosophy_title">Food Philosophy</string>
    <string name="food_philosophy_desc">My food philosophy is simple yet profound: Food is not just nourishment; it\'s an expression of culture, love, and creativity. It has the power to evoke memories, foster connections, and bring pure happiness. In Foodiepal, I hope you will be able to share not just recipes but the stories and emotions that make each dish special.
    \n\nWhether you\'re a seasoned chef or a novice in the kitchen, Foodiepal is designed to inspire and on your culinary journey. Embrace the joy of cooking, savor every bite, and create memorable experiences through the magic of food.
    </string>

    <string name="owner_email">ranjanpaudel@mail.com</string>

    <string-array name="rating_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>